<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Notepad</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_insert_note">Insert note</string>
    <string name="action_settings">Settings</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_email">Email</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_note_edit">Note edit</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="password">Password</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="sport">Socket port</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="java_mail_form">Send mail</string>
    <string name="all_categories">All the categories</string>
    <string name="action_change_category">Change category</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="new_category">New category</string>
    <string name="title_activity_categories_list">Categories List</string>
    <string name="manage_categories">Manage categories</string>
    <string name="new_category_name">New category name</string>
    <string name="ok">OK</string>
    <string name="tests">Tests</string>
    <string name="title_cannot_be_empty">Title field cannot be empty</string>
    <string name="title_activity_tests_list">TestsList</string>

    <string name="hello_world">Hello world!</string>
    <string name="perform_test">Perform test</string>
    <string name="delete_all">Delete all notes</string>
    <string name="test_succesful">Test run succesfully</string>
    <string name="test_not_success">Test not succesful</string>
    <string name="select_test">Select a test to perform</string>
    <string name="select_method">Select a method to test</string>
    <string name="delete_test_notes">Delete test notes</string>

</resources>
