<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

	<Spinner
		android:id="@+id/category_spinner"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">

		<EditText
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/title"/>
	</LinearLayout>
	<EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/body"/>

	<Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/confirm"/>

</LinearLayout>